Replace deprecated new URL constructors in resources-connector and webintegration
Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>